# colors-of-life

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.txt
scripts/: ai.rb  ai_blue.rb  ai_red.rb
src/: Entity.cpp  Entity.h  Grid.h  Vec2.cpp  Vec2.h  main.cpp
tests/: gc_registration_crash.cpp
